k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeops-backend
  namespace: coffeeops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffeeops-backend
  template:
    metadata:
      labels:
        app: coffeeops-backend
    spec:
      containers:
        - name: api
          image: goutamdhanani/coffeeops-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: coffeeops-backend
  namespace: coffeeops
spec:
  selector:
    app: coffeeops-backend
  ports:
    - port: 80
      targetPort: 8000
