k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeops-frontend
  namespace: coffeeops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffeeops-frontend
  template:
    metadata:
      labels:
        app: coffeeops-frontend
    spec:
      containers:
        - name: web
          image: goutamdhanani/coffeeops-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: coffeeops-frontend
  namespace: coffeeops
spec:
  selector:
    app: coffeeops-frontend
  ports:
    - port: 80
      targetPort: 80
